# MLOps-Proyecto-fase-2-equipo-29

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.dvc/: config
data/processed/: .gitignore
data/raw/: .gitignore  german_credit_modified.csv.dvc  german_credit_original.csv.dvc
docs/: README.md  generate_diagrams.py  mkdocs.yml
docs/docs/: index.md
mlops_project/: README.md  config.py  dataset.py  features.py  plots.py
mlops_project/modeling/: __init__.py  predict.py  train.py
notebooks/: README.md
notebooks/exploration/: 01_data_load.py  02_invalid_data_handler.py  03_outlier_detection.py  EDA_equipo_29.ipynb  eda_equipo_29_poo.py
notebooks/exploring/: 01_eda_south_german_credit.ipynb  01_eda_south_german_credit.py
notebooks/modeling/: 03_model_training_evaluation.ipynb  03_model_training_evaluation.py
notebooks/preprocessing/: 02_preprocessing_pipeline.ipynb  02_preprocessing_pipeline.py  04_data_transformation.py  05_data_splitter.py
tests/: __init__.py  conftest.py  test_config.py  test_dataset.py  test_dataset_io.py  test_features.py  test_modeling.py  test_modeling_improved.py  test_plots.py
